2006-04-05  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 4.02 released.

2006-04-04  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 4.01 released.

2006-03-28  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Makefile (SUBMODELS): Added it.

	* soil_heat1d.C: New submodel.

2006-03-14  Per Abrahamsen  <abraham@dina.kvl.dk>

	* soil_heat.C, soil_heat.h (capacity, capacity_apparent): New
	public members. 
	* soil_heat.C (capacity, C_apparent): Removed log variables.
	(solve, calculate_freezing_rate): Update callers.

2006-03-13  Per Abrahamsen  <abraham@dina.kvl.dk>

	* movement.h, movement.C: New component.
	* Makefile (COMPONENTS): Added it. 
	* movement_1D.C: New model.
	* Makefile (MODELS): Added it.

2006-02-21  Per Abrahamsen  <abraham@dina.kvl.dk>

	* sample/heat-properties.dai: New file.
	* sample/Makefile (SETUPS): Added.

	* parser_file.C (get_string): Support '\t' escape.

	* number_soil.C (soil_heat_capacity, soil_heat_conductivity): New
	models.

2006-02-09  Per Abrahamsen  <abraham@dina.kvl.dk>

	* weather_std.C (TempScale, TempOffset): New parameters.

2006-02-01  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 4.00 released.

2006-01-31  Per Abrahamsen  <abraham@dina.kvl.dk>

	* source_expr.C (load): Fix logic error.

2006-01-25  Per Abrahamsen  <abraham@dina.kvl.dk>

	* boolean.C (BooleanOrSyntax): Typo.

2006-01-17  Per Abrahamsen  <abraham@dina.kvl.dk>

	* source_file.C, source_file.h (handle): New parameter.

2006-01-16  Per Abrahamsen  <abraham@dina.kvl.dk>

	* treelog.C (warning, error): Suffix message.

2006-01-12  Per Abrahamsen  <abraham@dina.kvl.dk>

	* treelog.C (error, warning): Prefix message.

2006-01-10  Per Abrahamsen  <abraham@dina.kvl.dk>

	* integer.C, integer.h: New component.
	* Makefile (COMPONENTS): Add it.
	* integer_arit.C: New model.
	* Makefile (MODELS): Add it.

2006-01-02  Per Abrahamsen  <abraham@dina.kvl.dk>

	* select_content.C: Use linear interpolation between node points.
