@@ -24,33 +24,22 @@
 #include "surface.h"
 #include "soil_heat1d.h"
 #include "soil_chemicals.h"
-#include <memory>
-
-#if 1
 // We need some of these in order to ensure initialization order.
-#include "geometry.h"
-#include "soil.h"
-#include "soil_water.h"
 #include "weather.h"
 #include "vegetation.h"
 #include "bioclimate.h"
 #include "groundwater.h"
 #include "chemistry.h"
 #include "log.h"
-#else
-struct Weather;
-struct Vegetation;
-struct Bioclimate;
-struct Geometry;
-struct Soil;
-struct SoilWater;
-struct Groundwater;
-struct Chemistry;
-#endif
+
+#include <memory>
 
 struct Time;
 struct IM;
 struct AM;
+struct Geometry;
+struct Soil;
+struct SoilWater;
 
 class ColumnBase : public Column
 {
