@@ -23,35 +23,24 @@
 #ifndef SOIL_H
 #define SOIL_H
 
-// #define SOIL_GEO
-
-#ifdef SOIL_GEO
-#include "geometry.h"
-#else
-class Geometry;
-#endif  // SOIL_GEO
 #include "horizon.h" // Needed for initialization order.
 
 struct AttributeList;
 struct Log;
+struct Geometry;
 struct Groundwater;
 
 class Soil
-#ifdef SOIL_GEO
-  : public Geometry
-#endif  // SOIL_GEO
 {
   // Content.
   struct Implementation;
   Implementation& impl;
   // Cache for fast inline access.
   /* const */ std::vector<Horizon*> horizon_;
-#ifndef SOIL_GEO
-public:
-  size_t size () const;
-#endif
 
 public:
+  size_t size () const;
+
   // Water.
   double K (int i, double h, double h_ice, double T) const;
   double Cw1 (int i, double h, double h_ice) const;
